--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -310,6 +310,21 @@ h6 {
   text-decoration: underline;
 }
 
+.hideNav {
+  display: none;
+}
+
+.nav-links {
+  display: flex; 
+  align-items: end;
+  justify-content: space-around;   
+
+  @media (min-width: 1400px) {
+    display: none;
+  }
+  
+}
+
 #auth-signin {
   display: none;
 }
@@ -769,10 +784,10 @@ h2 {
   padding-bottom: 2rem;
   padding-left: 1rem;
   padding-right: 1rem;
+  max-width: 416px;
   display: flex;
   flex-direction: column;
-  position: relative;
-  gap: 2rem;
+  position: relative;  
 }
 .ref-box .quote {
   position: absolute;
@@ -787,6 +802,13 @@ h2 {
 .ref-box .client {
   width: 258px;
   height: 48px;
+}
+
+.author-box {
+  display: flex;
+  margin-left: 1rem;
+  margin-top: 1.5rem;
+  gap: 1.5rem;
 }
 
 #FAQ {
@@ -873,77 +895,24 @@ h2 {
   }
 }
 
+
 .qa {
   display: grid;
-  grid-template-columns: 6fr 1fr;
+  grid-template-columns: 1fr auto;
   padding-left: 1rem;
   align-items: center;
   text-align: left;
   border: solid, var(--color-gray2);
   border-top: none;
   background-color: var(--bg-q);
+  cursor: pointer;
 }
 .qa h4 {
   font-size: 16px;
 }
-@media (min-width: 768px) {
-  .qa {
-    box-shadow: 2px 4px 10px var(--color-gray2);
-    border: none;
-    border-radius: 10px;
-  }
-}
 
-.qa1 {
-  display: grid;
-  grid-template-columns: 6fr 1fr;
-  padding-left: 1rem;
-  align-items: center;
-  text-align: left;
-  border: solid, var(--color-gray2);
-  background-color: var(--bg-q);
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-.qa1 h4 {
-  font-size: 16px;
-}
-@media (min-width: 768px) {
-  .qa1 {
-    box-shadow: 2px 4px 10px var(--color-gray2);
-    border: none;
-    border-radius: 10px;
-  }
-}
 
-.qa2 {
-  display: grid;
-  grid-template-columns: 6fr 1fr;
-  padding-left: 1rem;
-  align-items: center;
-  text-align: left;
-  border: solid, var(--color-gray2);
-  background-color: var(--bg-q);
-}
-.qa2 h4 {
-  font-size: 16px;
-}
-@media (min-width: 768px) {
-  .qa2 {
-    box-shadow: 2px 4px 10px var(--color-gray2);
-    border: none;
-    border-radius: 10px;
-  }
-  .qa2 .btn-discover {
-    display: none;
-  }
-  .qa2 .btn-open1 {
-    display: block;
-  }
-}
-
-.answr {
-  padding: 1rem;
+.answr {  
   text-align: left;
   font-size: 14px;
   color: var(--color-gray7);
@@ -951,28 +920,32 @@ h2 {
   border-top: none;
   border-color: var(--color-gray2);
   background-color: var(--bg-q);
+  
+  display: grid;
+  grid-template-rows: 0fr;
+  overflow: hidden;
+  
+  transition: grid-template-rows 300ms, padding 300ms;
 }
+
 @media (min-width: 768px) {
+  .qa {
+    box-shadow: 2px 4px 10px var(--color-gray2);
+    border: none;
+    border-radius: 10px;
+  }
   .answr {
-    display: none;
+    box-shadow: 2px 4px 10px var(--color-gray2);
+    border: none;
+    border-radius: 10px;
   }
 }
 
-.answr1 {
-  display: none;
+.open .answr {
+  grid-template-rows: 1fr;
   padding: 1rem;
-  text-align: left;
-  font-size: 14px;
-  color: var(--color-gray7);
-  border-top: none;
-  border-color: var(--color-gray2);
-  padding-left: 0;
 }
-@media (min-width: 768px) {
-  .answr1 {
-    display: block;
-  }
-}
+
 
 .btn-discover1 {
   display: none;
@@ -986,9 +959,7 @@ h2 {
   }
 }
 
-.btn-open1 {
-  display: none;
-}
+
 
 .btn-question {
   height: 44px;
@@ -1031,53 +1002,16 @@ h2 {
   margin-bottom: 1rem;
 }
 .btn-answer:hover {
-  background-color: var(--color-gray1);
-  color: var(--color-gray8);
+  background-color: var(--color-gray4); 
   outline: none !important;
-  border-color: var(--color-primary);
+  border-color: var(--color-gray4);
 }
 .btn-answer:hover, .btn-answer:focus, .btn-answer:active {
   outline: none !important;
 }
-@media (min-width: 768px) {
-  .btn-answer {
-    display: none;
-  }
-}
 
-.btn-answer1 {
-  height: 44px;
-  width: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  border: 1px solid;
-  cursor: pointer;
-  background-color: var(--color-primary);
-  color: var(--color-white);
-  border-color: var(--color-primary);
-  outline: none !important;
-  display: none;
-}
-.btn-answer1:hover {
-  background-color: var(--color-gray1);
-  color: var(--color-gray8);
-  outline: none !important;
-  border-color: var(--color-primary);
-}
-.btn-answer1:hover, .btn-answer1:focus, .btn-answer1:active {
-  outline: none !important;
-}
-@media (min-width: 768px) {
-  .btn-answer1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-}
+
+
 
 .call {
   display: flex;
@@ -1179,9 +1113,13 @@ h2 {
   text-decoration: none;
 }
 
+.error {
+  color: red;
+}
+
 .email {
   padding-left: 2rem;
-  background-image: url("/Uppgift oktober/Image/icon/envelope.svg");
+  background-image: url("/src/Image/icon/envelope.svg");
   background-repeat: no-repeat;
   background-position: 10px 50%;
 }
