--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -120,12 +120,11 @@ h6 {
   display: grid;
   grid-template-columns: 1fr auto auto;
   align-items: center;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem; 
 }
 
 .header {
-  background-color: var(--color-gradient);
+  background-color: var(--color-gradient); 
 }
 
 .nav-link {
@@ -311,20 +310,47 @@ h6 {
   text-decoration: underline;
 }
 
+
+
+.showNav {
+  position: relative;
+}
 .hideNav {
-  display: none;
+  position: relative;
 }
 
 .nav-links {
+  position: absolute;
   display: flex; 
-  align-items: end;
-  justify-content: space-around;   
+  flex-direction: column; 
+  gap: 1rem; 
+  background-color: var(--color-white);
+  padding: 1rem;
+  border-radius: 5px;
+  border: 1px solid var(--color-gray3);
+  
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 20px;  
+  opacity: 0;
+  transform: translateY(-20px);  
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  left: 590px;
+  top: -50px;
 
+  
+  
   @media (min-width: 1400px) {
     display: none;
   }
   
 }
+.showNav .nav-links {
+  opacity: 1;
+  transform: translateY(0); 
+}
+
 
 #auth-signin {
   display: none;
@@ -910,10 +936,16 @@ h2 {
   border-top: none;
   background-color: var(--bg-q);
   cursor: pointer;
+  
 }
 .qa h4 {
   font-size: 16px;
 }
+
+.faq-card {
+  margin-bottom: 1rem;
+}
+
 
 
 .answr {  
@@ -924,11 +956,25 @@ h2 {
   border-color: var(--color-gray2);
   background-color: var(--bg-q);
   
-  
   display: grid;
   grid-template-rows: 0fr;
-  overflow: hidden;  
- 
+  overflow: hidden; 
+  transition: grid-template-rows 300ms, padding-bottom 300ms; 
+  
+  
+}
+
+.expandable {
+  min-height: 0px;
+}
+.open .answr {
+  grid-template-rows: 1fr;
+  padding: 1rem;
+}
+
+.open .qa{
+border-radius:10px 10px 0 0 ;
+border-bottom: solid 1px var(--color-gray2);
 }
 
 @media (min-width: 768px) {
@@ -944,15 +990,7 @@ h2 {
   }
 }
 
-.open .qa{
-border-radius:10px 10px 0 0 ;
-border-bottom: solid 1px var(--color-gray2);
-}
 
-.open .answr {
-  grid-template-rows: 1fr;
-  padding: 1rem;
-}
 
 
 
@@ -1144,9 +1182,6 @@ footer .credit {
   display: none;
 }
 
-.header {
-  background-color: var(--color-gray1);
-}
 
 #start-contact {
   background-color: var(--color-gray1);
@@ -1159,9 +1194,15 @@ footer .credit {
   gap: 1rem;
 }
 .breadCrumb a {
-  color: var(--color-default);
+  color: var(--color-gray6);
   text-decoration: none;
 }
+
+.breadCrumb span {
+  color: var(--color-primary);
+  font-weight: 400;
+}
+
 
 @media (min-width: 768px) {
   .container {
