--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -327,23 +327,25 @@ h6 {
   background-color: var(--color-white);
   padding: 1rem;
   border-radius: 5px;
-  border: 1px solid var(--color-gray3);
-  
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  border: 1px solid var(--color-gray3);  
+
   margin-top: 20px;  
   opacity: 0;
   transform: translateY(-20px);  
   transition: transform 0.5s ease, opacity 0.5s ease;
-  left: 400px;
-
+  left: 11rem;
+  top: -1rem;
+  
+  @media (min-width: 768px) {
+    max-width: 720px;
+    left: 36rem;
+    top: -4rem;
+  }
   
   
   @media (min-width: 1400px) {
     display: none;
-    left: 590px;
-    top: -50px;
+  
   }
   
 }
