--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -8,7 +8,7 @@
   }
 
   .homepage {
-    font-color: var(--color-gray3);
+    color: var(--color-gray3);
   }
   
   
@@ -269,6 +269,10 @@
     .middle {
       margin-top: 1rem;
       margin-bottom: 1rem;
+    }
+
+    .highlight {
+      font-weight: 900;
     }
 
     .socials {
